<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp"
	tools:context=".LoginActivity">

	<ImageView
		android:id="@+id/imageViewWelcome"
		android:layout_width="135dp"
		android:layout_height="113dp"
		android:layout_marginTop="32dp"
		android:src="@drawable/image_4"
		app:layout_constraintBottom_toTopOf="@+id/guidelineCenter"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.461"
		android:contentDescription="@string/logo"
		tools:ignore="ContentDescription" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guidelineCenter"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.5" />

	<Button
		android:id="@+id/btnLogin"
		android:layout_width="205dp"
		android:layout_height="63dp"
		android:layout_marginTop="12dp"
		android:text="@string/login2"
		android:textColor="#FFFFFF"
		app:backgroundTint="#667F93"
		app:layout_constraintTop_toBottomOf="@+id/guidelineCenter"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<Button
		android:id="@+id/btnRegister"
		android:layout_width="205dp"
		android:layout_height="63dp"
		android:layout_marginTop="16dp"
		android:text="@string/register2"
		android:textColor="#FFFFFF"
		app:backgroundTint="#667F93"
		app:layout_constraintTop_toBottomOf="@+id/btnLogin"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
